
13Apr04
- Fix crash in query command.
- Remove schedule from the default restore job.
- Fix data spooler to use min/max tape blocking factors.
- Automatically turn of conio if library not found instead of bombing.
- Cleaned up a lot of copyright dates.
- Try to keep spool statistics from going negative.
- Integrated wx-console code from Nicolas Boichat.
09Apr04
- Added new Pools chapter. Doc about using two disks.
- Attempt to keep the spool file statistics size from going 
  negative.
-8Apr04
- Fix the Director's Scheduled Jobs: list to have a ===
  termination.
- Fixed ./configure to disable readline rather than stop if 
  readline.h is not found
- Fixed a typo in the SQLite database update script as reported
  by Robert J. Clark - thanks.
07Apr04
- Removed src/win32/pthreads and src/win32/zlib from the source
  tree.
- Created a new depkgs-win32 that has the pthreads and zlib source
  code.
- Removed the JobDefs from the default Restore job as it has a
  schedule. Thanks to Matt Howard for this.


2004-04-06 Version 1.34.0 06Apr04 Release
06Apr04
- Turn off SIGQUIT in console.
05Apr04
- A good number of document updates.
- Fixed the order which multiple files are accepted for 
  inclusion in the restore tree due to the fact that PostgreSQL
  returns files in a different order from their insertion.
02Apr04
- Fix autochanger test in btape. It used old editing routines.
- Fix run_program to return 0 if program runs and no output.
- Add more debug to run_program.
- Make signal debug print signal string.
01Apr04
- Build console with client-only build.
- Add better error messages to some of the db_xxx routines.
- Apply Christopher Hull's patches for proper Win32 shutdown.
- Eliminate True and False in favor of true and false.
- Put correct thread id in jcr once the correct thread is running.
- Zap head and tail pointers in dlist when everything is removed.
- Rework sm_dump() so that it won't overrun a buffer when editing
  and error message.