@@ -7,6 +7,15 @@ Changes for 1.34.1:
 - Autochanger users, please note you must add %d to the end of the
   changer command line in your Device resource in your bacula-sd.conf
   file.
+- Modify bscan to print some elementary statistics (#Jobs, #Files, ...)
+  added to catalog.
+- Added --enable-wx-console and updated Makefile.in
+- Fix mtx-changer so that the calling sequence is compatible
+  with the previous version (the new one required arguments that
+  were not necessarily used).
+- Document how to use stunnel with Bacula.
+- Fix crash in query command.
+- Remove schedule from the default restore job.
 - Fix data spooler to use min/max tape blocking factors.
 - Automatically turn of conio if library not found instead of bombing.
 - Cleaned up a lot of copyright dates.
